Cascading Change Log

3.1.0 [unreleased]

  Updated c.f.t.p.r.t.BoundaryBalanceGroupSplitHashJoinTransformer to insert After and not AfterEachEdge.

  Fixed c.f.p.i.t.InsertionGraphTransformer to properly place insertions.

  Created cascading-expression sub-project to isolate all 'expression' operations based on Janino and it isolate
  the Janino dependency. A dependency to cascading-expression must be added to projects that depend on the isolated
  classes.

  Created cascading-hadoop2-io sub-project to isolate Hadoop 2.x HDFS and serialization dependencies and updated
  cascading-hadoop2-mr1 and cascading-hadoop2-tez to depend on cascading-hadoop2-io.

  Updated c.t.Fields to provide a constructor accepting type information, and a method #applyFields() to update
  field names.

  Added support for configuring split combining across supported platforms through the c.f.FlowRuntimeProps
  "cascading.flow.runtime.splits.combine" property. If enabled, will induce c.t.h.Hfs to enable combined files
  support on the MapReduce platforms.

  Updated Hadoop, Hadoop2, and Tez serialization and comparator frameworks to fully leverage declared field type
  information to reduce serialized data and perform bitwise equality comparisons. See c.t.h.TupleSerializationProps to
  disable bitwise comparisons.

3.0.2 [unreleased]

  Fixed issue where c.s.FlowNodeStats node kind could be mislabeled.

  Fixed issue where c.u.ShutdownUtil could log a NPE if a hook is removed during JVM shutdown.

  Updated build to exclude jgrapht-ext, further isolation of jgrapht apis to support reliable shading.

  Fixed issue where c.f.p.ProcessFlow would not propagate the application name, version, tags, etc to the management
  services.

  Fixed issue where c.s.FlowStepStats#getProcessStatusURL() always returned null for Apache MapReduce and Tez platforms.

  Fixed issue on Apache Tez where a split before and subsequent splicing back into a c.p.HashJoin could create an
  invalid plan.
